<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/spacing_m">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/first_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/second_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/third_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/four_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/hero"
        style="@style/TextAppearance.DotaStats.Field.Center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hero_column_title"
        app:layout_constraintEnd_toStartOf="@id/first_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/kills"
        style="@style/TextAppearance.DotaStats.Field.Center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kills_column_title"
        app:layout_constraintEnd_toStartOf="@id/second_guideline"
        app:layout_constraintStart_toEndOf="@id/first_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/deaths"
        style="@style/TextAppearance.DotaStats.Field.Center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/death_column_title"
        app:layout_constraintEnd_toStartOf="@id/third_guideline"
        app:layout_constraintStart_toEndOf="@id/second_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/assists"
        style="@style/TextAppearance.DotaStats.Field.Center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assists_column_title"
        app:layout_constraintEnd_toStartOf="@id/four_guideline"
        app:layout_constraintStart_toEndOf="@id/third_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/xpm"
        style="@style/TextAppearance.DotaStats.Field.Center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xpm_column_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/four_guideline"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>